syntax = "proto3";
package my.pkg;

import "generator/proto/validate.proto";

enum OpCode {
  OP_UNKNOWN = 0;
  OP_LOGIN   = 1;
  OP_STATUS  = 2;
  OP_DATA    = 3;
}

message Login   { string user = 1; }
message Status  { uint32 code = 1; }
message Data    { bytes  raw  = 1; }

message Envelope {
  uint32 version = 1 [(validate.rules).int32.gt = 0, (validate.rules).int32.lt = 100];
  OpCode opcode  = 2 [(validate.rules).enum.defined_only = true];
  oneof payload {
    Login  login  = 10;
    Status status = 11;
    Data   data   = 12;
  }
}

/* ===== RPC service definitions ===== */
// service AuthService {
//   rpc laLogin (Login) returns (Status);
// }

// service DataService {
//   rpc SendData (Data) returns (Status);
//   rpc GetData  (Status) returns (Data);
// }
